# symengine.py

./: .buildinfo  .gitignore  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  README.md  appveyor.yml  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  shell.nix  symengine_version.txt
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: modules.doctree  setup.doctree  symengine.compatibility.doctree  symengine.doctree  symengine.functions.doctree  symengine.lib.doctree  symengine.lib.symengine_wrapper.doctree  symengine.printing.doctree  symengine.sympy_compat.doctree  symengine.tests.doctree  symengine.tests.test_arit.doctree  symengine.tests.test_cse.doctree  symengine.tests.test_dict_basic.doctree  symengine.tests.test_eval.doctree  symengine.tests.test_expr.doctree  symengine.tests.test_functions.doctree  symengine.tests.test_lambdify.doctree  symengine.tests.test_logic.doctree  symengine.tests.test_matrices.doctree  symengine.tests.test_ntheory.doctree  symengine.tests.test_number.doctree  symengine.tests.test_pickling.doctree  symengine.tests.test_printing.doctree  symengine.tests.test_sage.doctree  symengine.tests.test_series_expansion.doctree  symengine.tests.test_sets.doctree  symengine.tests.test_solve.doctree  symengine.tests.test_subs.doctree  symengine.tests.test_symbol.doctree  symengine.tests.test_sympify.doctree  symengine.tests.test_sympy_compat.doctree  symengine.tests.test_sympy_conv.doctree  symengine.tests.test_var.doctree  symengine.utilities.doctree
.github/workflows/: ci.yml  mkdocs.yaml  pip_install.yml
_modules/: index.html  symengine.html
_modules/symengine/: compatibility.html  printing.html  utilities.html
_modules/symengine/tests/: test_arit.html  test_cse.html  test_dict_basic.html  test_eval.html  test_expr.html  test_functions.html  test_lambdify.html  test_logic.html  test_matrices.html  test_ntheory.html  test_number.html  test_pickling.html  test_printing.html  test_sage.html  test_series_expansion.html  test_sets.html  test_solve.html  test_subs.html  test_symbol.html  test_sympify.html  test_sympy_compat.html  test_sympy_conv.html  test_var.html
_sources/source/: modules.rst.txt  symengine.compatibility.rst.txt  symengine.functions.rst.txt  symengine.lib.rst.txt  symengine.lib.symengine_wrapper.rst.txt  symengine.printing.rst.txt  symengine.rst.txt  symengine.sympy_compat.rst.txt  symengine.tests.rst.txt  symengine.tests.test_arit.rst.txt  symengine.tests.test_cse.rst.txt  symengine.tests.test_dict_basic.rst.txt  symengine.tests.test_eval.rst.txt  symengine.tests.test_expr.rst.txt  symengine.tests.test_functions.rst.txt  symengine.tests.test_lambdify.rst.txt  symengine.tests.test_logic.rst.txt  symengine.tests.test_matrices.rst.txt  symengine.tests.test_ntheory.rst.txt  symengine.tests.test_number.rst.txt  symengine.tests.test_pickling.rst.txt  symengine.tests.test_printing.rst.txt  symengine.tests.test_sage.rst.txt  symengine.tests.test_series_expansion.rst.txt  symengine.tests.test_sets.rst.txt  symengine.tests.test_solve.rst.txt  symengine.tests.test_subs.rst.txt  symengine.tests.test_symbol.rst.txt  symengine.tests.test_sympify.rst.txt  symengine.tests.test_sympy_compat.rst.txt  symengine.tests.test_sympy_conv.rst.txt  symengine.tests.test_var.rst.txt  symengine.utilities.rst.txt
benchmarks/: Lambdify.py  Lambdify_6_links_reference.pyx  Lambdify_6_links_rhs.py  expand2.py  expand2_sage.py  expand3.py  expand3_sage.py  expand4_sage.py  expand5.py  expand5_sage.py  expand6b.py  kane.py  pydy_pendulum.py
cmake/: FindCython.cmake  FindNumPy.cmake  FindPython.cmake  cython_test.pyx  get_suffix.py
docs/: conf.py  index.rst
nix/: nsymengine.nix  sources.json
source/: modules.html  setup.html  symengine.compatibility.html  symengine.functions.html  symengine.html  symengine.lib.html  symengine.lib.symengine_wrapper.html  symengine.printing.html  symengine.sympy_compat.html  symengine.tests.html  symengine.tests.test_arit.html  symengine.tests.test_cse.html  symengine.tests.test_dict_basic.html  symengine.tests.test_eval.html  symengine.tests.test_expr.html  symengine.tests.test_functions.html  symengine.tests.test_lambdify.html  symengine.tests.test_logic.html  symengine.tests.test_matrices.html  symengine.tests.test_ntheory.html  symengine.tests.test_number.html  symengine.tests.test_pickling.html  symengine.tests.test_printing.html  symengine.tests.test_sage.html  symengine.tests.test_series_expansion.html  symengine.tests.test_sets.html  symengine.tests.test_solve.html  symengine.tests.test_subs.html  symengine.tests.test_symbol.html  symengine.tests.test_sympify.html  symengine.tests.test_sympy_compat.html  symengine.tests.test_sympy_conv.html  symengine.tests.test_var.html  symengine.utilities.html
symengine/: CMakeLists.txt  __init__.py  functions.py  printing.py  sympy_compat.py  test_utilities.py  utilities.py  version.py.in
symengine/include/: CMakeLists.txt  pywrapper.h
symengine/lib/: CMakeLists.txt  config.pxi.in  pyfunction.h  pynumber.cpp  pynumber.h  pywrapper.cpp  pywrapper.h  symengine.pxd  symengine_wrapper.in.pxd  symengine_wrapper.in.pyx  symengine_wrapper.pxd  symengine_wrapper.pyx
symengine/lib/symengine/: CMakeLists.txt  pywrapper.h
symengine/tests/: CMakeLists.txt  test_arit.py  test_dict_basic.py  test_eval.py  test_expr.py  test_functions.py  test_integer.py  test_lambdify.py  test_logic.py  test_matrices.py  test_ntheory.py  test_number.py  test_pickling.py  test_printing.py  test_relationals.py  test_sage.py  test_series_expansion.py  test_sets.py  test_solve.py  test_subs.py  test_symbol.py  test_sympify.py  test_sympy_compat.py  test_sympy_conv.py  test_var.py
