[project]
name = "symengine"
dynamic = ["version"]
description = "Python library providing wrappers to SymEngine"
authors = [
  {name = "SymEngine development team", email="symengine@googlegroups.com"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Physics',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
]

[project.urls]
Homepage = "https://symengine.org"
Documentation = "https://symengine.org/symengine.py"
Repository = "https://github.com/symengine/symengine.py"
Issues = "https://github.com/symengine/symengine.py/issues"

[build-system]
requires = ["scikit-build-core", "cython>=0.29.14", "setuptools-scm", "cython-cmake"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["symengine/_version.py"]
editable.mode = "inplace"

[tool.setuptools_scm]  # Section required
write_to = "symengine/_version.py"
